Subscribe section added and supports responsive layouts for mobile, tablets.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -20,6 +20,8 @@ $color-system-success: #22c55e;
 
 /// Grayscale
 $color-gray-scale: #e2e5f1;
+$grey-900: #d4d7e5;
+$grey-500: #b4b7c9;
 
 // =============================================================================
 // Fonts
@@ -89,7 +91,7 @@ $display-heading: (
   "d-7": 2.76875em,
   /// 44.3ox
   "d-8": 2.13125em
-    /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+    /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
@@ -170,7 +172,7 @@ $breakpoints: (
   "small": 500px,
   "medium": 768px,
   "xlarge": 1200px,
-  "xlarge-1": 1305px,
+  "xlarge-1": 1299px,
   "xlarge-2": 1340px,
   "xlarge-3": 1420px,
 );
