--- a/src/scss/pages/_main-page.scss
+++ b/src/scss/pages/_main-page.scss
@@ -44,7 +44,7 @@
 .skeleton-wrapper {
   @include l.grid-row-colum(
     map-get($map: a.$display-type, $key: "grid"),
-    a.create-list(1fr),
+    a.create-list(auto),
     a.create-list(auto, 2fr, auto)
   );
 
@@ -663,7 +663,8 @@ $_container-name-main: main;
 
   /// White
   & .main-wrapper__app-description,
-  & .main-wrapper__faq {
+  & .main-wrapper__faq,
+  & .main-wrapper__subscribe {
     background-color: white;
   }
 
@@ -673,7 +674,8 @@ $_container-name-main: main;
   &__app-how-diw__container,
   &__app-description__container,
   &__clients-app__container,
-  &__faq__container {
+  &__faq__container,
+  &__subscribe__container {
     /// Adding Correct Full With for content
     /// Content Width
     @include l.content-width(
@@ -692,7 +694,8 @@ $_container-name-main: main;
   &__faq__container__faq-accordion__container,
   &__faq__container__faq-accordion__container__title,
   &__faq__container__faq-contact,
-  &__faq__container__faq-contact__contact-card {
+  &__faq__container__faq-contact__contact-card,
+  &__subscribe__container__wrapper {
     @include l.flex(flex-start);
   }
 }
@@ -1503,10 +1506,7 @@ $_container-name-main: main;
         map-get($map: a.$breakpoints, $key: "xlarge-1")
       ) {
         & {
-          @include a.padding-left-right(
-            map-get($map: a.$spacing-distance-relative, $key: "s-1-87"),
-            map-get($map: a.$spacing-distance-relative, $key: "s-1-87")
-          );
+          padding: 1em;
         }
       }
 
@@ -1793,7 +1793,6 @@ $_container-name-main: main;
         & {
           /// Adding Paddings
           padding-top: 3.625em;
-          padding-bottom: 2.625em;
           text-align: center;
           justify-content: center;
 
@@ -1823,10 +1822,7 @@ $_container-name-main: main;
       ) {
         & {
           @include l.grid-position(1, 1, 3, 3);
-          @include a.padding-left-right(
-            map-get($map: a.$spacing-distance-relative, $key: "s-1-87"),
-            map-get($map: a.$spacing-distance-relative, $key: "s-1-87")
-          );
+          padding: 1em;
         }
 
         /// Contact Card
@@ -1852,6 +1848,176 @@ $_container-name-main: main;
 
       ///----------- Responsive END -----------
     }
+  }
+
+  /// Subscribe to our newsletter
+  &__subscribe__container {
+    ///----------- Global CSS START -----------
+    margin: auto;
+    padding: 0;
+    ///----------- Global CSS END -----------
+    ///----------- Responsive START -----------
+    @include l.container-query(
+      $_container-name-main,
+      map-get($map: a.$breakpoints, $key: "medium")
+    ) {
+      padding: 0 1em 0 1em;
+    }
+    @include l.container-query(
+      $_container-name-main,
+      map-get($map: a.$breakpoints, $key: "xlarge-1")
+    ) {
+      padding: 0;
+    }
+    ///----------- Responsive END -----------
+  }
+  &__subscribe__container__wrapper {
+    margin: auto;
+    background-color: a.$color-grey;
+    border: 1px solid transparent;
+    width: 100%;
+    border-radius: map-get($map: a.$border-radius, $key: "r-0-5");
+
+    ///----------- Global CSS START -----------
+    &__flex {
+      width: 100%;
+      align-items: center;
+    }
+
+    &__flex--form {
+      position: relative;
+      align-items: stretch;
+      justify-content: center;
+      /// Styling Form
+      & input,
+      button {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        @include b.font-settings(
+          map-get($map: a.$font-sizes, $key: "t-s"),
+          null
+        );
+      }
+      & input {
+        width: 100%;
+        flex-grow: 1;
+        padding: 0.5em 1em;
+        font-size: inherit;
+        border: 1px solid a.$grey-900;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+        color: a.$grey-500;
+
+        padding-left: 15%;
+        font-weight: map-get($map: a.$font-weight, $key: "Regular");
+      }
+      & button {
+        font-weight: map-get($map: a.$font-weight, $key: "SemiBold");
+      }
+      & i {
+        position: absolute;
+        left: 10%;
+        top: 50%;
+        transform: translateY(-50%);
+        color: a.$grey-500;
+      }
+    }
+
+    ///----------- Global CSS END -----------
+
+    ///----------- Responsive START -----------
+    /// Mobile Devices
+    @include l.container-query(
+      $_container-name-main,
+      0,
+      map-get($map: a.$breakpoints, $key: "medium")
+    ) {
+      & {
+        row-gap: 1em;
+        flex-direction: column;
+        justify-content: center;
+        padding-bottom: 2.25em;
+      }
+
+      &__flex {
+        padding: map-get($map: a.$spacing-distance-relative, $key: "s-1-1");
+      }
+      &__flex h4 {
+        padding-left: map-get(
+          $map: a.$spacing-distance-relative,
+          $key: "s-1-25"
+        );
+      }
+      &__flex h4:last-child {
+        display: none;
+      }
+
+      &__flex--display-flex {
+        display: flex;
+      }
+    }
+
+    /// Tablet and smaller laptops
+    @include l.container-query(
+      $_container-name-main,
+      map-get($map: a.$breakpoints, $key: "medium")
+    ) {
+      & {
+        justify-content: center;
+        align-items: center;
+        padding: 4.5em 1.5625em 4.5em 1.5625em;
+      }
+
+      &__flex--display-flex {
+        display: flex;
+        justify-content: center;
+      }
+
+      &__flex--form {
+        & i {
+          left: 5%;
+        }
+      }
+      &__flex h4 {
+        padding-left: map-get(
+          $map: a.$spacing-distance-relative,
+          $key: "s-1-25"
+        );
+      }
+      &__flex h4:last-child {
+        display: none;
+      }
+    }
+
+    /// Desktops and beyond the universe of Starcraft
+    @include l.container-query(
+      $_container-name-main,
+      map-get($map: a.$breakpoints, $key: "xlarge-1")
+    ) {
+      & {
+        padding: 4.5em 7em 4.5em 7em;
+      }
+
+      &__flex--display-flex {
+        flex: 1.4;
+      }
+
+      &__flex h4 {
+        display: none;
+      }
+      &__flex h4:last-child {
+        display: block;
+      }
+      &__flex--form {
+        flex: 1;
+        padding-left: 4.625em;
+        & i {
+          left: 18%;
+        }
+      }
+    }
+
+    ///----------- Responsive END -----------
   }
 }
 
