--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -22,6 +22,7 @@ $color-system-success: #22c55e;
 $color-gray-scale: #e2e5f1;
 $grey-900: #d4d7e5;
 $grey-500: #b4b7c9;
+$grey-600: #9397ad;
 
 // =============================================================================
 // Fonts
@@ -91,7 +92,7 @@ $display-heading: (
   "d-7": 2.76875em,
   /// 44.3ox
   "d-8": 2.13125em
-    /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+    /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
