Releasing version 1.0.0 for Basic Grade Level

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -92,7 +92,7 @@ $display-heading: (
   "d-7": 2.76875em,
   /// 44.3ox
   "d-8": 2.13125em
-    /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+    /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
@@ -352,4 +352,6 @@ $test: true;
   --interactive-transition-focus-visible: 200ms;
   --interactive-bg-focus-visible: #{$color-form};
   --interactive-use-hsl-focus-visible: true;
+
+  --theme-color: #ffffff;
 }
