--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,28 +1,6 @@
-@charset "UTF-8";
 @use "sass:meta";
-/* Fonts */
-/* Font Colors */
-$font-color-primary: #565973;
-$font-color-secondary: #0b0f19;
-$font-color-text: #585c7b;
-$font-color-label: #131022;
-/* Fonts END */
-
-/// Colors
-$color-primary: #6366f1;
-$color-white: #ffffff;
-$color-form: #9397ad;
-$color-button-black: #0b0f19;
-$color-grey: #f3f6ff;
-$system-warning: #ffba08;
-$system-grey: #b4b7c9;
-$color-system-success: #22c55e;
-
-/// Grayscale
-$color-gray-scale: #e2e5f1;
-$grey-900: #d4d7e5;
-$grey-500: #b4b7c9;
-$grey-600: #9397ad;
+/// Importing Colors
+@use "_colors" as c;
 
 // =============================================================================
 // Fonts
@@ -66,10 +44,12 @@ $font-weight: (
 /// Font-Awesome
 $font-family-font-awesome: "Font Awesome 6 Free";
 $font-awesome-src: (
-  "fa-brands-400-woff2": "@assets/fonts/Font-Awesome/fa-regular-400.woff2",
-  "fa-brands-400-ttf": "@assets/fonts/Font-Awesome/fa-regular-400.ttf",
+  "fa-regular-400-woff2": "@assets/fonts/Font-Awesome/fa-regular-400.woff2",
+  "fa-regular-400-ttf": "@assets/fonts/Font-Awesome/fa-regular-400.ttf",
   "fa-solid-900-woff2": "@assets/fonts/Font-Awesome/fa-solid-900.woff2",
-  "fa-solid-900-ttf": "@assets/fonts/Font-Awesome/fa-solid-900.woff2",
+  "fa-solid-900-ttf": "@assets/fonts/Font-Awesome/fa-solid-900.ttf",
+  "fa-brands-400-woff2": "@assets/fonts/Font-Awesome/fa-brands-400.woff2",
+  "fa-brands-400-ttf": "@assets/fonts/Font-Awesome/fa-brands-400.ttf",
 );
 
 $font-sizes: (
@@ -92,7 +72,7 @@ $display-heading: (
   "d-7": 2.76875em,
   /// 44.3ox
   "d-8": 2.13125em
-    /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+    /// 34.1px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
@@ -103,28 +83,6 @@ $headings: (
   "h-5": 1.25rem,
   "h-6": 1rem,
 );
-
-/// @name links-color
-/// Specifying Colors for all links in the website
-/// @type Map
-/// @group Layout
-/// @example code-scss
-///   .element {
-///     font-color: map-get($map: $links-color, $key: 'link-nav');
-///   }
-$links-color: (
-  "link-nav": #33354d,
-  "link-bar": #3e4265,
-);
-
-/// @name links-color
-/// Specifying Colors for all links in the website
-/// @type Map
-/// @group Layout
-/// @example code-scss
-///   .element {
-///     font-color: map-get($map: $links-color, $key: 'link-nav');
-///   }
 
 // =============================================================================
 // Layout
@@ -201,7 +159,7 @@ $max-content-width: (
 ///   .element {
 ///     gap: map-get($map: $spacing-distance-relative, $key: 's-0-15');
 ///   }
-$spacing-distance-relative: (
+$spacing-distance-relfative: (
   /// 2px
   "s-0-12": 0.125em,
   /// 8px
@@ -317,6 +275,10 @@ $test: true;
 
 :root {
   /// =============================================================================
+  /// Base
+  /// =============================================================================
+
+  /// =============================================================================
   /// Components
   /// =============================================================================
   /// Icon Settings
@@ -324,8 +286,8 @@ $test: true;
   --icon-height: #{2.25rem};
   --fa-icon-width: #{map-get($map: $spacing-distance-base, $key: "sb-0-62")};
   --fa-icon-height: #{map-get($map: $spacing-distance-base, $key: "sb-0-62")};
-  --fa-icon-bg-color: #{$color-grey};
-  --fa-icon-color: #{map-get($map: $links-color, $key: "link-nav")};
+  --fa-icon-bg-color: #{c.$grey-100};
+  --fa-icon-color: #{c.$grey-770};
   --fa-icon-style-default: #{solid};
   --icon-border-radius: #{50%};
 
@@ -333,24 +295,24 @@ $test: true;
   --interactive-transition-base: 300ms;
 
   // Hover state
-  --interactive-color-hover: #{$color-white};
+  --interactive-color-hover: #{c.$color-white};
   --interactive-relative-hover: 4.2;
   --interactive-transition-hover: 400ms;
-  --interactive-bg-hover: #{$color-primary};
+  --interactive-bg-hover: #{c.$color-primary};
   --interactive-use-hsl-hover: true;
 
   // Active state
-  --interactive-color-active: #{$color-white};
+  --interactive-color-active: #{c.$color-white};
   --interactive-relative-active: 1;
   --interactive-transition-active: 200ms;
-  --interactive-bg-active: #{$color-form};
+  --interactive-bg-active: #{c.$grey-600};
   --interactive-use-hsl-active: true;
 
   // Focus-visible state
-  --interactive-color-focus-visible: #{$color-white};
+  --interactive-color-focus-visible: #{c.$color-white};
   --interactive-relative-focus-visible: 1;
   --interactive-transition-focus-visible: 200ms;
-  --interactive-bg-focus-visible: #{$color-form};
+  --interactive-bg-focus-visible: #{c.$grey-600};
   --interactive-use-hsl-focus-visible: true;
 
   --theme-color: #ffffff;
