--- a/src/scss/base/_core.scss
+++ b/src/scss/base/_core.scss
@@ -1,7 +1,25 @@
-@charset "UTF-8";
 @use "sass:map";
-@use "../abstracts" as a;
-@use "@scss/vendors" as v;
+@use "@scss/base/_typography" as t;
+@use "@scss/abstracts/_themes" as th;
+
+html {
+  font-size: t.$core-font-size;
+}
+
+/// Theme Settings
+:root {
+  --logo-image: url("@assets/images/svg/logo.svg");
+  --app-image-android: url("@assets/images/svg/app-android-store-btn-group.svg");
+  --app-image-apple: url("@assets/images/svg/app-store-btn-group.svg");
+  @include th.generate-theme-vars(th.$light-theme);
+}
+
+.dark-theme {
+  --logo-image: url("@assets/images/svg/logo-dark.svg");
+  --app-image-android: url("@assets/images/svg/app-android-store-btn-group-dark.svg");
+  --app-image-apple: url("@assets/images/svg/app-apple-store-btn-group-dark.svg");
+  @include th.generate-theme-vars(th.$dark-theme);
+}
 
 * {
   margin: 0;
@@ -13,14 +31,4 @@
 
 a {
   text-decoration: none;
-}
-
-/// Code taken from Joakim L from EC-Education Sweden
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  text-wrap: balance;
 }
